# cloud-run-sandbox

./: .gitignore  Dockerfile  Dockerfile.test  GEMINI.md  LICENSE  README.md  ci_debug.py  compose.yaml  lifecycle.md  main.py  package-lock.json  package.json  pytest.ini  requirements.txt  run_tests.sh  setup_host_network.sh  tsconfig.example.json  tsconfig.json
client/: client.py
clients/python/: README.md  pyproject.toml
clients/python/src/codesandbox/: __init__.py  exceptions.py  process.py  sandbox.py  types.py
clients/python/src/sandbox/: connection.py  exceptions.py  process.py  sandbox.py  types.py
clients/python/tests/: test_connection.py  test_process.py  test_sandbox.py
cloud-run-sandbox/: LICENSE
debug/: check_restore.py  ci_debug.py  verify_network.sh
docs/: api.md  checkpoint_and_restore.md  client_reconnection.md  filesystem_snapshot.md  gcs_bucket_structure.md  gcs_lock.md  lifecycle.md  plan.md  sandbox_refactoring_plan.md  security.md
example/: checkpoint.ts  client_example.py  client_example.ts  filesystem_snapshot.ts  handoff.ts  handoff.ts~  interactive_shell.ts  lifecycle.ts  reconnect.ts  test_fib.py  test_gcs_lock.py  test_hello.py
examples/: checkpoint.py  checkpoint.ts  client_example.py  client_example.ts  filesystem_snapshot.py  filesystem_snapshot.ts  handoff.py  lifecycle.py  reconnect.py  reconnect.ts  test_fib.py  test_gcs_lock.py  test_hello.py
plans/: api_updates_for_gcs.md  checkpoint_and_restore.md  client_js_checkpoint.md  filesystem_snapshot.md  gcs_lock_integration.md  gcs_locking.md  overall_plan.md  security.md  (+5 more)
(+77 files in other folders)
